--- a/Flat/main/templates/index.html
+++ b/Flat/main/templates/index.html
@@ -6,5 +6,16 @@
 </head>
 <body>
 <p> Главная страница</p>
+<ul>
+    <li>
+        <a href="/about/"> О нас</a>
+    </li>
+
+    <li>
+        <a href="/contact/"> Контакты</a>
+    </li>
+</ul>
+
+
 </body>
 </html>
