создан_шаблон_бустрапа_с_навбаром(боковым)_хдэром_и_футером

--- a/Flat/main/templates/index.html
+++ b/Flat/main/templates/index.html
@@ -1,9 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
+
+{% extends 'base.html' %}
+
 <body>
 <p> Главная страница</p>
 <ul>
@@ -18,4 +15,3 @@
 
 
 </body>
-</html>
