сделана_авторизация_и_ограниче_дступа

--- a/Flat/main/templates/base.html
+++ b/Flat/main/templates/base.html
@@ -4,15 +4,15 @@
 
   <meta charset="UTF-8">
 
-<link rel="apple-touch-icon" type="image/png" href="https://cpwebassets.codepen.io/assets/favicon/apple-touch-icon-5ae1a0698dcc2402e9712f7d01ed509a57814f994c660df9f7a952f3060705ee.png">
-<meta name="apple-mobile-web-app-title" content="CodePen">
+<!--<link rel="apple-touch-icon" type="image/png" href="https://cpwebassets.codepen.io/assets/favicon/apple-touch-icon-5ae1a0698dcc2402e9712f7d01ed509a57814f994c660df9f7a952f3060705ee.png">-->
+<!--<meta name="apple-mobile-web-app-title" content="CodePen">-->
 
-<link rel="shortcut icon" type="image/x-icon" href="https://cpwebassets.codepen.io/assets/favicon/favicon-aec34940fbc1a6e787974dcd360f2c6b63348d4b1f4e06c77743096d55480f33.ico">
+<!--<link rel="shortcut icon" type="image/x-icon" href="https://cpwebassets.codepen.io/assets/favicon/favicon-aec34940fbc1a6e787974dcd360f2c6b63348d4b1f4e06c77743096d55480f33.ico">-->
 
-<link rel="mask-icon" type="" href="https://cpwebassets.codepen.io/assets/favicon/logo-pin-8f3771b1072e3c38bd662872f6b673a722f4b3ca2421637d5596661b4e2132cc.svg" color="#111">
+<!--<link rel="mask-icon" type="" href="https://cpwebassets.codepen.io/assets/favicon/logo-pin-8f3771b1072e3c38bd662872f6b673a722f4b3ca2421637d5596661b4e2132cc.svg" color="#111">-->
 
 
-  <title>CodePen - Bootstrap 4 Sidebar Menu To Top</title>
+
 
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.1/css/bootstrap.css">
@@ -111,6 +111,11 @@ body {
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
+  <a class="navbar-brand" style="color:white;">Sidebar </a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
 
   <div class="collapse navbar-collapse" id="navbarCollapse">
     <ul class="navbar-nav mr-auto sidenav" id="navAccordion">
@@ -166,6 +171,15 @@ body {
       <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
       <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
     </form>
+    {% if user.is_authenticated %}
+    <form class="form-inline ml-auto mt-2 mt-md-0">
+    <a class="navbar-brand" style="color:white;">вы вошли как {{ user.username }}</a>
+    <a href="{% url 'logout' %}" class="btn btn-outline-success my-0 my-sm-0" type="submit"> выход </a>
+    {% else %}
+    <form class="form-inline ml-auto mt-2 mt-md-0">
+      <a href="{% url 'login' %}" class="btn btn-outline-success my-0 my-sm-0" type="submit"> вйцуход </a>
+    </form>
+    {% endif %}
   </div>
 </nav>
 
@@ -178,7 +192,7 @@ body {
 <footer class="footer">
   <div class="container">
       <div class="text-center">
-          <span>Coded by <a href="https://si-dev.com/ru">SI-Dev</a>, 2018</span>
+          <span>Coded by <a href="#">qwe</a>, 2021</span>
       </div>
   </div>
 </footer>
