--- a/Flat/main/templates/base.html
+++ b/Flat/main/templates/base.html
@@ -104,17 +104,30 @@ body {
 
 
 </head>
+<body>
+<header>{% block header %}{% endblock %}</header>
+{%block content %}
+{% endblock content %}
 
-<body translate="no">
-  <nav class="navbar navbar-expand-lg navbar-dark fixed-top bg-dark">
-  <a class="navbar-brand" href="#">Sidebar Nav</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <a class="navbar-brand" style="color:white;">Sidebar </a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
+</body>
+
+    <script src="https://cpwebassets.codepen.io/assets/common/stopExecutionOnTimeout-157cd5b220a5c80d4ff8e0e70ac069bffd87a61252088146915e8726e5d9f147.js"></script>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.1/js/bootstrap.min.js"></script>
+      <script id="rendered-js">
+$(document).ready(function () {
+  $('.nav-link-collapse').on('click', function () {
+    $('.nav-link-collapse').not(this);
+    $(this).toggleClass('nav-link-show');
+  });
+});
+//# sourceURL=pen.js
+    </script>
+
+
+  <nav class="navbar-expand-lg navbar-dark  ">
+
 
 
   <div class="collapse navbar-collapse" id="navbarCollapse">
@@ -127,16 +140,19 @@ body {
       </li>
       <li class="nav-item">
         <a class="nav-link nav-link-collapse" href="#" id="hasSubItems" data-toggle="collapse" data-target="#collapseSubItems2" aria-controls="collapseSubItems2" aria-expanded="false">Item 2</a>
-        <ul class="nav-second-level collapse" id="collapseSubItems2" data-parent="#navAccordion">
+        <ul class="nav-second-level collapse" id="collapseSubItems2"  >
+          <li class="nav-item">
+            <a class="nav-link" href="#">
+              <span class="nav-link-text">Item 2.1</span>
+            </a>
+                    <a class="nav-link nav-link-collapse" href="#" id="hasSubItems1" data-toggle="collapse" data-target="#collapseSubItems3" aria-controls="collapseSubItems3" aria-expanded="false">Item 3</a>
+        <ul class="nav-second-level collapse" id="collapseSubItems3" >
           <li class="nav-item">
             <a class="nav-link" href="#">
               <span class="nav-link-text">Item 2.1</span>
             </a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">
-              <span class="nav-link-text">Item 2.2</span>
-            </a>
+        </ul>
           </li>
         </ul>
       </li>
@@ -145,7 +161,7 @@ body {
       </li>
       <li class="nav-item">
         <a class="nav-link nav-link-collapse" href="#" id="hasSubItems" data-toggle="collapse" data-target="#collapseSubItems4" aria-controls="collapseSubItems4" aria-expanded="false">Item 4</a>
-        <ul class="nav-second-level collapse" id="collapseSubItems4" data-parent="#navAccordion">
+        <ul class="nav-second-level collapse" id="collapseSubItems4" >
           <li class="nav-item">
             <a class="nav-link" href="#">
               <span class="nav-link-text">Item 4.1</span>
@@ -167,19 +183,7 @@ body {
         <a class="nav-link" href="#">Item 5</a>
       </li>
     </ul>
-    <form class="form-inline ml-auto mt-2 mt-md-0">
-      <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-    </form>
-    {% if user.is_authenticated %}
-    <form class="form-inline ml-auto mt-2 mt-md-0">
-    <a class="navbar-brand" style="color:white;">вы вошли как {{ user.username }}</a>
-    <a href="{% url 'logout' %}" class="btn btn-outline-success my-0 my-sm-0" type="submit"> выход </a>
-    {% else %}
-    <form class="form-inline ml-auto mt-2 mt-md-0">
-      <a href="{% url 'login' %}" class="btn btn-outline-success my-0 my-sm-0" type="submit"> вйцуход </a>
-    </form>
-    {% endif %}
+
   </div>
 </nav>
 
@@ -188,30 +192,6 @@ body {
     <h1>Информация про кофейни</h1>
   </div>
 </main>
-
-<footer class="footer">
-  <div class="container">
-      <div class="text-center">
-          <span>Coded by <a href="#">qwe</a>, 2021</span>
-      </div>
-  </div>
-</footer>
-    <script src="https://cpwebassets.codepen.io/assets/common/stopExecutionOnTimeout-157cd5b220a5c80d4ff8e0e70ac069bffd87a61252088146915e8726e5d9f147.js"></script>
-
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.1/js/bootstrap.min.js"></script>
-      <script id="rendered-js">
-$(document).ready(function () {
-  $('.nav-link-collapse').on('click', function () {
-    $('.nav-link-collapse').not(this).removeClass('nav-link-show');
-    $(this).toggleClass('nav-link-show');
-  });
-});
-//# sourceURL=pen.js
-    </script>
-
-
-
 
 
 
