--- a/Flat/main/templates/flatpages/about.html
+++ b/Flat/main/templates/flatpages/about.html
@@ -5,7 +5,11 @@
     <title>Title</title>
 </head>
 <body>
+{% if user.is_authenticated %}
 {{ flatpage.content|linebreaks}}
 <a href="/"> Домой</a>
+{% else %}
+<p>Авторизируйтесь что бы просмотреть информацию <a href="{%url 'login'%}">Авторизация</a></p>
+{% endif %}
 </body>
 </html>
