--- a/Flat/main/templates/flatpages/about.html
+++ b/Flat/main/templates/flatpages/about.html
@@ -1,15 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'base.html' %}
+
+{%block content %}
 {% if user.is_authenticated %}
 {{ flatpage.content|linebreaks}}
 <a href="/"> Домой</a>
 {% else %}
 <p>Авторизируйтесь что бы просмотреть информацию <a href="{%url 'login'%}">Авторизация</a></p>
 {% endif %}
-</body>
-</html>
+{% endblock %}
