--- a/Flat/main/templates/header.html
+++ b/Flat/main/templates/header.html
@@ -1,19 +1,20 @@
 <header>
 <body translate="no">
-    <nav class="navbar navbar-expand-lg navbar-dark fixed-top bg-dark">
-      <a class="navbar-brand" href="#">Sidebar Nav</a>
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top" style="background-color: #65abf2">
+      <a class="navbar-brand" style="color:red;" href="#">Jeffreys Franchising</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <a class="navbar-brand" style="color:white;">Sidebar </a>
+      <a class="navbar-brand" style="color:black;"> </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="navbarCollapse">
-        <form class="form-inline ml-auto mt-2 mt-md-0">
-          <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+      <div class="newsletter">
+        <form action="{% url 'search' %}" method="get">
+          <input type="text" name="s" placeholder="Search...">
+          <input type="submit" value="Search">
         </form>
+      </div>
         {% if user.is_authenticated %}
         <form class="form-inline ml-auto mt-2 mt-md-0">
         <a class="navbar-brand" style="color:white;">вы вошли как {{ user.username }}</a>
