--- a/Flat/main/templates/search.html
+++ b/Flat/main/templates/search.html
@@ -1,10 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-
-</body>
-</html>
+{% extends 'base.html' %}
+{% block content %}
+{% for i in content %}
+<h3><a href="{{ i.url }}">{{ i.title }}</a></h3>
+{% empty %}
+<h2>По вашему запросу ничего не найдено...</h2>
+{% endfor %}
+{% endblock %}
