перед импортом в mysql

--- a/Flat/main/templates/registration/login.html
+++ b/Flat/main/templates/registration/login.html
@@ -108,7 +108,8 @@ body {
 <div class="login-page">
 
   <div class="form">
-      <h3>Авторизируйтесь для просмотра информации на сайте </h3>
+      <h3><strong>База знаний Jeffreys</strong> </h3>
+      <h4>Войдите для просмотра информации </h4>
 <form method="post">
 
   {% csrf_token %}
