--- a/Flat/main/templates/header.html
+++ b/Flat/main/templates/header.html
@@ -1,7 +1,7 @@
 <header>
 <body translate="no">
-    <nav class="navbar navbar-expand-lg navbar-light fixed-top" style="background-color: #65abf2">
-      <a class="navbar-brand" style="color:red;" href="#">Jeffreys Franchising</a>
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top" style="background-color: #343A40">
+      <a class="navbar-brand" style="color:white;" href="#"><strong>Jeffreys Franchising</strong></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -17,11 +17,11 @@
       </div>
         {% if user.is_authenticated %}
         <form class="form-inline ml-auto mt-2 mt-md-0">
-        <a class="navbar-brand" style="color:white;">вы вошли как {{ user.username }}</a>
+        <a class="navbar-brand" style="color:white;">Вы вошли как {{ user.username }}</a>
         <a href="{% url 'logout' %}" class="btn btn-outline-success my-0 my-sm-0" type="submit"> выход </a>
         {% else %}
         <form class="form-inline ml-auto mt-2 mt-md-0">
-          <a href="{% url 'login' %}" class="btn btn-outline-success my-0 my-sm-0" type="submit"> вйцуход </a>
+          <a href="{% url 'login' %}" class="btn btn-outline-success my-0 my-sm-0" type="submit"> entry </a>
         </form>
         {% endif %}
       </div>
