--- a/Flat/main/templates/base.html
+++ b/Flat/main/templates/base.html
@@ -412,6 +412,9 @@ $(document).ready(function () {
                     </li>
                   </ul>
                 </li>
+                <li class="nav-item active" >
+                  <a class="nav-link" style="color:white;" href="/news/">Новости   <span class="sr-only">(current)</span></a>
+                </li>
               </ul>
 
             </div>
