--- a/Flat/main/templates/header.html
+++ b/Flat/main/templates/header.html
@@ -19,10 +19,12 @@
         <form class="form-inline ml-auto mt-2 mt-md-0">
         <a class="navbar-brand" style="color:white;">Вы вошли как {{ user.username }}</a>
         <a href="{% url 'logout' %}" class="btn btn-outline-success my-0 my-sm-0" type="submit"> выход </a>
+        </form>
         {% else %}
         <form class="form-inline ml-auto mt-2 mt-md-0">
           <a href="{% url 'login' %}" class="btn btn-outline-success my-0 my-sm-0" type="submit"> entry </a>
         </form>
+
         {% endif %}
       </div>
     </nav>
