--- a/Flat/main/templates/base.html
+++ b/Flat/main/templates/base.html
@@ -415,9 +415,32 @@ $(document).ready(function () {
                 <li class="nav-item active" >
                   <a class="nav-link" style="color:white;" href="/news/">Новости   <span class="sr-only">(current)</span></a>
                 </li>
+                <li class="nav-item active" >
+                  <a class="nav-link" style="color:white;" href="{% url 'register' %}">Регистрация   <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item active" >
+                  <a class="nav-link" style="color:white;" href="{% url 'send-mail' %}">отправить письмо   <span class="sr-only">(current)</span></a>
+                </li>
               </ul>
 
             </div>
+
+            {% for message in messages %}
+
+                {% if message.tags == 'error' %}
+                    <div class="alert alert-danger" role="alert">
+                        {{ message }}
+                    </div>
+                {% else %}
+                    <div class="alert alert-{{ message.tags }}" role="alert">
+                        {{ message }}
+                    </div>
+                {% endif %}
+
+            {% endfor %}
+
+
+
           </nav>
           </main>
         </div>
