--- a/Flat/news/templates/news/list_category_tag.html
+++ b/Flat/news/templates/news/list_category_tag.html
@@ -1,7 +1,7 @@
 <!--здесь создаться шаблон для inslusion_tag, а потом в любой шаблон вставляешь имя тега и данный шаблон вставиться
 в страницу-->
 <div class="list-group">
-    {% for item in context %}
+    {% for item in categories %}
     <a href="{% url 'category' item.pk %}" class="list-group-item list-group-item-action">{{ item.title_category }}</a>
     {% endfor %}
 </div>
