было сделано:подписка на рассылку, отправка писем при появлении нового поста, комменты

--- a/Flat/main/templates/flatpages/search/manual.html
+++ b/Flat/main/templates/flatpages/search/manual.html
@@ -3,8 +3,9 @@
 
 
 {% block content %}
-
-{{ flatpage.content| safe}}
-
-
+<div id="colorlib-main">
+<div class="container">
+<p class="mb-4">{{flatpage.content}}</p>
+</div>
+</div>
 {% endblock %}
