--- a/Flat/news/templates/news/send_mail.html
+++ b/Flat/news/templates/news/send_mail.html
@@ -1,6 +1,9 @@
 {% extends 'base.html' %}
 {% block content %}
 
+
+<div id="colorlib-main">
+<div class="container">
 <form  method="post" >
 
     {% csrf_token %}
@@ -8,4 +11,8 @@
     <button type="submit" class="btn btn-primary" > отправить письмо</button>
 
 </form>
+
+</form>
+</div>
+</div>
 {% endblock  %}
