--- a/Flat/main/templates/flatpages/index.html
+++ b/Flat/main/templates/flatpages/index.html
@@ -1,9 +1,10 @@
 {% extends 'base.html' %}
 
-{% block header %}
-{% include 'header.html' %}
-{% endblock %}
-{% block content %}
 
-    {{flatpage.content}}
-{% endblock  %}
+{% block content %}
+<div id="colorlib-main">
+<div class="container">
+<p class="mb-4">{{flatpage.content}}</p>
+</div>
+</div>
+{% endblock %}
