--- a/Flat/news/templates/news/add_category.html
+++ b/Flat/news/templates/news/add_category.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
+<div id="colorlib-main">
+<div class="container">
 <form action="{% url 'add_category' %}" method="post" enctype="multipart/form-data">
 
     {% csrf_token %}
@@ -7,4 +9,7 @@
     <button type="submit" class="btn btn-primary" > Добавить категорию</button>
 
 </form>
+</div>
+</div>
+
 {% endblock %}
