--- a/Flat/news/templates/news/news_tag.html
+++ b/Flat/news/templates/news/news_tag.html
@@ -2,39 +2,29 @@
 {% load _simpletag %}
 
 {% block content %}
-<title></title>
-<div class="container mt-5">
-    <div class="row">
-        <div class="col-md-9">
-            {% for item in news_tag %}
-            <div class="card mb-3">
-                <div class="card-header">
-                    Категория: <a href="{% url 'category' item.category.pk %}" > {{ item.category }}</a>
-                </div>
-                {% if item.photo %}
-                <img src="{{ item.photo.url }}" alt="" width="350" class="mr-3">
-                {% endif %}
-                <div class="card-body">
-                    <h5 class="card-title">{{ item.title }}</h5>
-                    <p class="card-text">{{ item.content|truncatewords:50 }}</p>
-                    <a href="{{ item.get_absolute_url }}" class="btn btn-primary">Читать далее...</a>
-                </div>
-                <div class="card-footer text-muted">
-                    {{ item.create_date}}
-                </div>
-            </div>
-            {% endfor %}
-        </div>
-        <div class="col-md-3">
-            <div class="list-group">
+{%for item in news_tag %}
+<div id="colorlib-main">
+<div class="container">
 
-                {%  list_category%}
-
-
-
-            </div>
-
-        </div>
-    </div>
+<div class="col-md-12">
+<div class="blog-entry ftco-animate d-md-flex fadeInUp ftco-animated">
+<a href="single.html" class="img img-2" style="background-image:url('{{item.photo.url}}')"></a>
+<div class="text text-2 pl-md-4">
+<h3 class="mb-2"><a href="{{item.get_absolute_url }}">{{item.title}}g</a></h3>
+<div class="meta-wrap">
+<p class="meta">
+<span>Dec 14, 2018</span>
+<span><a href="single.html">{{item.category}}</a></span>
+<span>5 Comment</span>
+</p>
 </div>
+<p class="mb-4">{{item.content| truncatewords:50}}.</p>
+<p><a href="{{item.get_absolute_url }}" class="btn-custom">Читать далее <span class="ion-ios-arrow-forward"></span></a></p>
+    <hr>
+</div>
+</div>
+</div>
+</div>
+</div>
+{% endfor %}
 {% endblock %}
