--- a/Flat/templates/base1.html
+++ b/Flat/templates/base1.html
@@ -9,15 +9,24 @@
 <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Lora:400,400i,700,700i&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Abril+Fatface&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="css/A.open-iconic-bootstrap.min.css+animate.css+owl.carousel.min.css+owl.theme.default.min.css+magnific-popup.css+aos.css+ionicons.min.css+bootstrap-datepicker.css+jquery.timepicker.css+flaticon.css+icomoo.css" />
+<link rel="stylesheet" href="{% static 'news/css/A.open-iconic-bootstrap.min.css+animate.css+owl.carousel.min.css+owl.theme.default.min.css+magnific-popup.css+aos.css+ionicons.min.css+bootstrap-datepicker.css+jquery.timepicker.css+flaticon.css+icomoo.css'%}" />
+
+
 </head>
-</head>
+
 <body>
 <div id="colorlib-page">
 <a href="index.html#" class="js-colorlib-nav-toggle colorlib-nav-toggle"><i></i></a>
 <aside id="colorlib-aside" role="complementary" class="js-fullheight">
-   {% comment%}
+
+{% include "inc/_side.html" %}
+{% comment%}
+
+
 <nav id="colorlib-main-menu" role="navigation">
+
+
+
 <ul>
 <li class="colorlib-active"><a href="index.html">Home</a></li>
 <li><a href="fashion.html">Fashion</a></li>
