--- a/Flat/templates/base2.html
+++ b/Flat/templates/base2.html
@@ -6,44 +6,136 @@
 <title>Andrea - Free Bootstrap 4 Template by Colorlib</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="{% static 'news/css/sidebar.css'%}" />
 <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Lora:400,400i,700,700i&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Abril+Fatface&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="css/A.open-iconic-bootstrap.min.css+animate.css+owl.carousel.min.css+owl.theme.default.min.css+magnific-popup.css+aos.css+ionicons.min.css+bootstrap-datepicker.css+jquery.timepicker.css+flaticon.css+icomoo.css" />
+<link rel="stylesheet" href="{% static 'news/css/main.css'%}" />
+
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.1/css/bootstrap.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
+<link rel="shortcut icon" type="image/x-icon" href="{% static 'news/images/image.0.png' %}">
+
+     <style>
+html {
+    position: relative;
+    min-height: 100%;
+}
+
+body {
+    padding-top: 4.5rem;
+    margin-bottom: 4.5rem;
+}
+
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 3.5rem;
+  line-height: 3.5rem;
+  background-color: #ccc;
+}
+
+.nav-link:hover {
+  transition: all 0.4s;
+  color: #80b3e5 !important;
+}
+
+
+
+.nav-link:focus {
+  color: orange !important;
+}
+
+.nav-link-collapse:after {
+  float: right;
+  content: '\f067';
+  font-family: 'FontAwesome';
+}
+
+.nav-link-show:after {
+  float: right;
+  content: '\f068';
+  font-family: 'FontAwesome';
+}
+
+.nav-item ul.nav-second-level {
+  padding-left: 0;
+}
+
+.nav-item ul.nav-second-level > .nav-item {
+  padding-left: 10px;
+}
+
+@media (min-width: 992px) {
+  .sidenav {
+    position: fixed;
+    top: 60;
+    left: 0;
+    width: 220px;
+    height: calc(100vh - 3.5rem);
+    margin-top: 40rem;
+    background: #343A40;
+    box-sizing: border-box;
+    border-top: 1px solid rgba(0, 0, 0, 3);
+    overflow-y: auto;
+    font-family: Verdana;
+
+
+
+  }
+
+  .navbar-expand-lg .sidenav {
+    flex-direction: column;
+
+
+  }
+
+
+  .content-wrapper {
+    margin-left: 230px;
+  }
+
+
+}
+</style>
+
+ <script>
+  window.console = window.console || function(t) {};
+</script>
+
+
+  <script>
+  if (document.location.search.match(/type=embed/gi)) {
+    window.parent.postMessage("resize", "*");
+  }
+</script>
+
 </head>
-</head>
+
 <body>
+<script src="https://cpwebassets.codepen.io/assets/common/stopExecutionOnTimeout-157cd5b220a5c80d4ff8e0e70ac069bffd87a61252088146915e8726e5d9f147.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.1/js/bootstrap.min.js"></script>
+<script id="rendered-js">
+$(document).ready(function () {
+  $('.nav-link-collapse').on('click', function () {
+    $('.nav-link-collapse').not(this);
+    $(this).toggleClass('nav-link-show');
+  });
+});
+//# sourceURL=pen.js
+    </script>
+
 <div id="colorlib-page">
-<a href="index.html#" class="js-colorlib-nav-toggle colorlib-nav-toggle"><i></i></a>
-<aside id="colorlib-aside" role="complementary" class="js-fullheight">
-   {% comment%}
-<nav id="colorlib-main-menu" role="navigation">
-<ul>
-<li class="colorlib-active"><a href="index.html">Home</a></li>
-<li><a href="fashion.html">Fashion</a></li>
-<li><a href="travel.html">Travel</a></li>
-<li><a href="about.html">About</a></li>
-<li><a href="contact.html">Contact</a></li>
-</ul>
-</nav> <!--сайдбар-->
-<div class="colorlib-footer">
-<h1 id="colorlib-logo" class="mb-4"><a href="index.html" style="background-image:url(../static/news/images/xbg_1.jpg.pagespeed.ic.yyDakF8d8Y.jpg)">Andrea <span>Moore</span></a></h1>
-<div class="mb-4">
-<h3>Subscribe for newsletter</h3>
-<form action="index.html#" class="colorlib-subscribe-form">
-<div class="form-group d-flex">
-<div class="icon"><span class="icon-paper-plane"></span></div>
-<input type="text" class="form-control" placeholder="Enter Email Address">
-</div>
-</form>
-</div>
-<p class="pfooter">
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-</p>
-</div> <!--футер-->
-    {% endcomment %}
-</aside>
+
+
+    {% include "inc/header.html" %}
+
+
+
 <div id="colorlib-main">
+    {% include "inc/_side.html" %}
 <section class="ftco-section ftco-no-pt ftco-no-pb">
 <div class="container">
 <div class="row d-flex">
@@ -391,6 +483,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
 <script>eval(mod_pagespeed_YuUFcjXVeT);</script>
 <script>eval(mod_pagespeed_6pY$MsZg3C);</script>
+
 
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-23581568-13"></script>
 <script>
